--- a/src/template.html
+++ b/src/template.html
@@ -32,7 +32,7 @@
 	<div id="sapper">%sapper.html%</div>
 
 	<!-- HTML Form for Netlify -->
-	<form netlify netlify-honeypot="zipCode" name="contactUs" autocomplete="off" hidden><input type="text" name="name" autocomplete="off" /><input type="email" name="email" autocomplete="off" /><input type="tel" name="phone" autocomplete="off" /><input type="text" name="message" autocomplete="off" /><input type="hidden" name="_subject" value="New Contact Form Submission" /><input type="text" name="zipCode" autocomplete="off" /></form>
+	<form netlify netlify-honeypot="zipCode" name="contactUs" autocomplete="off" hidden><input type="text" name="name" autocomplete="off" /><input type="email" name="email" autocomplete="off" /><input type="tel" name="phone" autocomplete="off" /><input type="text" name="message" autocomplete="off" /><input type="text" name="zipCode" autocomplete="off" /></form>
 
 </body>
 </html>
