--- a/src/template.html
+++ b/src/template.html
@@ -9,6 +9,12 @@
 
 	<link rel="manifest" href="manifest.json" crossorigin="use-credentials">
 	<link rel="icon" type="image/png" href="favicon.ico">
+	<meta property="og:title" content="Homepage">
+	<meta property="og:site_name" content="A Site With No Name">
+	<meta property="og:url" content="https://asitewithnoname.com/">
+	<meta property="og:description" content="The official ASWNN homepage, with links to active and past projects, as well as information on its members.">
+	<meta property="og:type" content="website">
+	<meta property="og:image" content="https://asitewithnoname.com/img/horse.png">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
