--- a/src/template.html
+++ b/src/template.html
@@ -17,6 +17,7 @@
 	<meta property="og:image" content="https://asitewithnoname.com/img/horse.png">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+	<!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "7948b9354d734d69b6866cecb098731f", "spa": true}'></script><!-- End Cloudflare Web Analytics -->
 
 	<!-- Sapper creates a <script> tag containing `src/client.js`
 	     and anything else it needs to hydrate the app and
